--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -1,76 +1,50 @@
-
 <!DOCTYPE HTML>
 <html>
+
 <head>
     <title>Flask-SocketIO Test</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.4/socket.io.js" integrity="sha512-aMGMvNYu8Ue4G+fHa359jcPb1u+ytAF+P2SCb+PxrjCdO3n3ZTxJ30zuH39rimUggmTwmh2u7wvQsDTHESnmfQ==" crossorigin="anonymous"></script>
-    <style>
-    html {
-     font-family: Arial;
-     display: inline-block;
-     margin: 0px auto;
-     text-align: center;
-    }
-    h2 { font-size: 3.0rem; }
-    p { font-size: 3.0rem; }
-    .units { font-size: 1.2rem; }
-    .dht-labels{
-      font-size: 1.5rem;
-      vertical-align:middle;
-      padding-bottom: 15px;
-    }
-  </style>
 
-    <script type="text/javascript" charset="utf-8">
-        $(document).ready(function() {
-            // Connect to the Socket.IO server.
-            // The connection URL has the following format, relative to the current page:
-            //     http[s]://<domain>:<port>[/<namespace>]
-            var socket = io();
 
-            // Event handler for new connections.
-            // The callback function is invoked when a connection with the
-            // server is established.
-            socket.on('connect', function() {
-                socket.emit('my_event', {data: 'I\'m connected!'});
-                console.log("connected!")
-            });
 
-            // Event handler for server sent data.
-            // The callback function is invoked whenever the server emits data
-            // to the client. The data is then displayed in the "Received"
-            // section of the page.
-            socket.on("mqtt_message",function(msg,cb){
-                
-                var payload = JSON.parse(msg["payload"]);
-                console.log(payload);
-                console.log(payload["tmp"]);
-                $("#temperature").text(payload["tmp"]);
-                $("#humidity").text(payload["humidity"]);
-
-                $('#log').append('<br>' + $('<div/>').text('Received #' + msg["topic"] + ': ' + msg["payload"]).html());
-                if (cb)
-                    cb();
-            })
-
-            
-        });
-    </script>
 </head>
+<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/sensors.css') }}">
+
 <body>
-<h2>ESP8266 DHT Server</h2>
-  <p>
-    <i class="fas fa-thermometer-half" style="color:#059e8a;"></i> 
-    <span class="dht-labels">Temperature</span> 
-    <span id="temperature">tmp</span>
-    <sup class="units">&deg;C</sup>
-  </p>
-  <p>
-    <i class="fas fa-tint" style="color:#00add6;"></i> 
-    <span class="dht-labels">Humidity</span>
-    <span id="humidity">humidity</span>
-    <sup class="units">%</sup>
-  </p>
+
+    <p>
+        <i class="fas fa-thermometer-half" style="color:#059e8a;"></i>
+        <span class="dht-labels">Temperature</span>
+        <span id="temperature">Nan</span>
+        <sup class="units">&deg;C</sup>
+    </p>
+    <p>
+        <i class="fas fa-tint" style="color:#00add6;"></i>
+        <span class="dht-labels">Humidity</span>
+        <span id="humidity">Nan</span>
+        <sup class="units">%</sup>
+    </p>
+
+
+    <div style="display: flex">
+        <div><canvas width="100" height="400"></canvas></div>
+        <div>
+            <canvas id="temp_chart" width="550" height="400"></canvas>
+        </div>
+        <div><canvas width="100" height="400"></canvas></div>
+        <div>
+            <canvas id="humidity_chart" width="550" height="400"></canvas>
+        </div>
+    </div>
 </body>
+
+
+<script type="text/javascript" charset="utf-8"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.4/socket.io.js" integrity="sha512-aMGMvNYu8Ue4G+fHa359jcPb1u+ytAF+P2SCb+PxrjCdO3n3ZTxJ30zuH39rimUggmTwmh2u7wvQsDTHESnmfQ==" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js@3.6.2/dist/chart.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js/dist/chart.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
+<script src="{{url_for('static', filename='js/sensors.js')}}" defer></script>
+
 </html>
