--- a/api/templates/layout.html
+++ b/api/templates/layout.html
@@ -23,10 +23,10 @@
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{url_for('login')}}">Login</a>
+                    <a class="nav-link" href="{{url_for('buildings')}}">Buildings</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{url_for('register')}}">Register</a>
+                    <a class="nav-link" href="{{url_for('logout')}}">Logout</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
