--- a/api/templates/login.html
+++ b/api/templates/login.html
@@ -36,7 +36,7 @@
                                     </div>
 
 
-                                    <a href="#!" style="color: #393f81;">Register here</a></p>
+                                    <a href="{{url_for('register')}}" style="color: #393f81;">Register here</a></p>
                                     <a href="#!" class="small text-muted">Terms of use.</a>
                                     <a href="#!" class="small text-muted">Privacy policy</a>
                                 </form>
