--- a/api/templates/layout.html
+++ b/api/templates/layout.html
@@ -43,9 +43,9 @@
     </nav>
     {% endblock %}
 
+    <h3>{{session["username"]}}/{{session["building_name"]}}/{{session["device_name"]}} </h3>
 
-
-    <div id="content">{% block content %}{% endblock %}</div>
+    <div class="container">{% block content %}{% endblock %}</div>
 
 
 
