--- a/api/templates/sensor.html
+++ b/api/templates/sensor.html
@@ -1,4 +1,5 @@
-{% extends "layout.html" %} {% block content %}
+{% extends "layout.html" %} 
+{% block content %}
 
 <p>
     <i class="fas fa-thermometer-half" style="color:#059e8a;"></i>
@@ -24,7 +25,14 @@
         <canvas id="humidity_chart" width="550" height="400"></canvas>
     </div>
 </div>
-<script>
-    var userID
-</script>
+
+
+
 {% endblock %}
+{% block scripts%}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.4/socket.io.js" integrity="sha512-aMGMvNYu8Ue4G+fHa359jcPb1u+ytAF+P2SCb+PxrjCdO3n3ZTxJ30zuH39rimUggmTwmh2u7wvQsDTHESnmfQ==" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js@3.6.2/dist/chart.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js/dist/chart.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
+<script src="{{url_for('static', filename='js/sensors.js')}}" defer></script> 
+{% endblock%}
