--- a/api/templates/all_devices.html
+++ b/api/templates/all_devices.html
@@ -1,19 +1,21 @@
-{% extends "layout.html" %} 
- {% block content %}
+{% extends "layout.html" %} {% block content %}
 <button type="button " class="btn btn-primary " data-bs-toggle="modal" data-bs-target="#exampleModal ">
   Add a Device
 </button> {% if devices %}
 <div class="list-group">
     {% for device in devices %}
 
-    
-    <a href="{{url_for('get_device',_name=device['name'],_type=device['type'])}}" class="list-group-item list-group-item-action">
+
+    <div id="{{device['name']}}">
+        <a href="{{url_for('get_device',_name=device['name'],_type=device['type'])}}" class="list-group-item list-group-item-action">
     name:{{device["name"]}} <br> type: {{device["type"]}} <br> building:{{device["building_name"]}}
      </a>
 
 
-    
-    <button type="button" class="btn btn-danger btn-sm" onclick="window.location.href='{{url_for('delete_device',device_name=device['name'] ) }}'">Delete</button> {% endfor %}
+
+        <button type="button" class="btn btn-danger btn-sm" onclick="delete_device(this)">Delete</button>
+    </div>
+    {% endfor %}
 </div>
 {% else %}
 <h3>No devices here create one </h3>
@@ -34,7 +36,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body ">
-                <form method="POST" action="{{url_for('new_device',building_name=session['building_name'])}}">
+                <form method="POST" action="/new_device">
                     <div class="form-group row">
                         <label for="name" class="col-sm-2 col-form-label">Name</label>
                         <div class="col-sm-10">
@@ -45,6 +47,18 @@
                         <label for="type" class="col-sm-2 col-form-label">type</label>
                         <div class="col-sm-10">
                             <input type="text" class="form-control" name="type" id="type">
+                        </div>
+                    </div>
+
+
+                    <div class="form-group row">
+                        <label for="building_name" class=col-sm-2 col-form-label>Building</label>
+                        <div class="col-sm-10">
+                            <select class="form-control" id="building_name" name="building_name">
+                            {% for building in buildings %}
+                            <option>{{building["name"]}}</option>
+                            {% endfor %}
+                        </select>
                         </div>
                     </div>
                     <div class="form-group row">
@@ -66,5 +80,22 @@
 
 
 
+
+{% endblock %} {% block scripts %}
+
+<script>
+    function delete_device(device) {
+        device_name = $(device).parent().attr('id');
+
+
+        $.post('/delete_device', {
+            device_name: device_name
+        })
+
+        $("#" + device_name).remove();
+
+
+    }
+</script>
 
 {% endblock %}
