--- a/api/templates/buildings.html
+++ b/api/templates/buildings.html
@@ -1,23 +1,19 @@
-{% extends "layout.html" %} \
-{% block content %}
+{% extends "layout.html" %} \ {% block content %}
 <button type="button " class="btn btn-primary " data-bs-toggle="modal" data-bs-target="#exampleModal ">
   Add a Building
-</button>
-
-{% if buildings %} 
+</button> 
+{% if buildings %}
 <div class="list-group">
-  {% for building in buildings %}
-    <br>
+    {% for building in buildings %}
 
-    <a href="{{url_for('building_devices',building_name=building['name']) }}" class="list-group-item list-group-item-action">
-    {{building["name"]}} - {{building["location"]}}</a> 
-    <br>
-    <button type="button"
-     class="btn btn-danger btn-sm" 
-     onclick="window.location.href='{{url_for('delete_building',building_name=building['name'] ) }}'" >Delete</button>
-  
- 
-  {% endfor %}
+      <div id="{{building['name']}}"> 
+        <br>
+        <a href="{{url_for('building_devices',building_name=building['name']) }}" class="list-group-item list-group-item-action">
+          {{building["name"]}} - {{building["location"]}}</a>
+        <br>
+        <button type="button" class="btn btn-danger btn-sm" onclick="delete_building(this)">Delete</button> 
+      </div>
+    {% endfor %}
 </div>
 {% else %}
 <h3>No buildings here create one </h3>
@@ -31,39 +27,55 @@
 
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1 " aria-labelledby="exampleModalLabel" aria-hidden="true ">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel ">Add a new building</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body ">
-        <form method="POST" action="{{url_for('new_building')}}">
-        <div class="form-group row">
-            <label for="inputName" class="col-sm-2 col-form-label">Name</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" name="name" id="inputName">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel ">Add a new building</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-        </div>
-        <div class="form-group row">
-            <label for="inputName" class="col-sm-2 col-form-label">Location</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" name="location" id="inputName">
-            </div>
-        </div>
+            <div class="modal-body ">
+                <form method="POST" action="{{url_for('new_building')}}">
+                    <div class="form-group row">
+                        <label for="inputName" class="col-sm-2 col-form-label">Name</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" name="name" id="inputName">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="inputName" class="col-sm-2 col-form-label">Location</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" name="location" id="inputName">
+                        </div>
+                    </div>
 
-        
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+            </form>
         </div>
-        <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </div>
-        </form>
     </div>
-  </div>
 </div>
 
 
 
+
+{% endblock %} {% block scripts %}
+
+<script>
+    function delete_building(building) {
+        building_name = $(building).parent().attr('id');
+
+
+        $.post('/delete_building', {
+            building_name: building_name
+        })
+
+        $("#" + building_name).remove();
+
+    }
+</script>
 
 {% endblock %}
