--- a/api/templates/devices.html
+++ b/api/templates/devices.html
@@ -1,26 +1,16 @@
-{% extends "layout.html" %} \
-{% block content %}
+{% extends "layout.html" %} \ {% block content %}
 <button type="button " class="btn btn-primary " data-bs-toggle="modal" data-bs-target="#exampleModal ">
   Add a Device
-</button>
-
-{% if devices %} 
+</button> {% if devices %}
 <div class="list-group">
-  {% for device in devices %}
-   
-    
+    {% for device in devices %}
+
+
     <a href="{{url_for('get_device',_name=device['name'],_type=device['type'])}}" class="list-group-item list-group-item-action">
     {{device["name"]}} - {{device["type"]}}
      </a>
-     
-     <button type="button"
-     class="btn btn-danger btn-sm" 
-     onclick="window.location.href='{{url_for('delete_device',device_name=device['name'] ) }}'" >Delete</button>
-    
 
-  
- 
-  {% endfor %}
+    <button type="button" class="btn btn-danger btn-sm" onclick="window.location.href='{{url_for('delete_device',device_name=device['name'] ) }}'">Delete</button> {% endfor %}
 </div>
 {% else %}
 <h3>No devices here create one </h3>
@@ -28,50 +18,59 @@
 
 <!-- Button trigger modal -->
 
-
-
-
-
-<!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1 " aria-labelledby="exampleModalLabel" aria-hidden="true ">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel ">Add a new device</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body ">
-        <form method="POST" action="{{url_for('new_device',building_name=session['building_name'])}}">
-        <div class="form-group row">
-            <label for="name" class="col-sm-2 col-form-label">Name</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" name="name" id="name">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel ">Add a new device</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body ">
+                <form method="POST" action="/new_device">
+                    <div class="form-group row">
+                        <label for="name" class="col-sm-2 col-form-label">Name</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" name="name" id="name">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="type" class="col-sm-2 col-form-label">type</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" name="type" id="type">
+                        </div>
+                    </div>
+
+
+                    <div class="form-group row">
+                        <label for="building_name" class=col-sm-2 col-form-label>Building</label>
+                        <div class="col-sm-10">
+                            <input name="building_name" class="form-control" type="text" value="{{session['building_name']}}" readonly>
+                            </select>
+                        </div>
+                        <div class="form-group">
+
+
+
+                            <div class="form-group row">
+                                <label for="password" class="col-sm-2 col-form-label">password</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" name="password" id="password">
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                        </div>
+                </form>
+                </div>
             </div>
         </div>
-        <div class="form-group row">
-            <label for="type" class="col-sm-2 col-form-label">type</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" name="type" id="type">
-            </div>
-        </div>
-        <div class="form-group row">
-            <label for="password" class="col-sm-2 col-form-label">password</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" name="password" id="password">
-            </div>
-        </div>
-
-        </div>
-        <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </div>
-        </form>
-    </div>
-  </div>
-</div>
 
 
 
 
-{% endblock %}
+
+
+        {% endblock %}
