--- a/api/templates/devices.html
+++ b/api/templates/devices.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %} \ {% block content %}
+{% extends "layout.html" %} {% block content %}
 <button type="button " class="btn btn-primary " data-bs-toggle="modal" data-bs-target="#exampleModal ">
   Add a Device
 </button> {% if devices %}
@@ -6,11 +6,16 @@
     {% for device in devices %}
 
 
-    <a href="{{url_for('get_device',_name=device['name'],_type=device['type'])}}" class="list-group-item list-group-item-action">
-    {{device["name"]}} - {{device["type"]}}
+    <div id="{{device['name']}}">
+        <a href="{{url_for('get_device',_name=device['name'],_type=device['type'])}}" class="list-group-item list-group-item-action">
+    name:{{device["name"]}} <br> type: {{device["type"]}} <br> building:{{device["building_name"]}}
      </a>
 
-    <button type="button" class="btn btn-danger btn-sm" onclick="window.location.href='{{url_for('delete_device',device_name=device['name'] ) }}'">Delete</button> {% endfor %}
+
+
+        <button type="button" class="btn btn-danger btn-sm" onclick="delete_device(this)">Delete</button>
+    </div>
+    {% endfor %}
 </div>
 {% else %}
 <h3>No devices here create one </h3>
@@ -18,6 +23,11 @@
 
 <!-- Button trigger modal -->
 
+
+
+
+
+<!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1 " aria-labelledby="exampleModalLabel" aria-hidden="true ">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -40,37 +50,61 @@
                         </div>
                     </div>
 
-
+                    {% if buildings%}
                     <div class="form-group row">
                         <label for="building_name" class=col-sm-2 col-form-label>Building</label>
                         <div class="col-sm-10">
-                            <input name="building_name" class="form-control" type="text" value="{{session['building_name']}}" readonly>
-                            </select>
+                            <select class="form-control" id="building_name" name="building_name">
+                            {% for building in buildings %}
+                            <option>{{building["name"]}}</option>
+                            {% endfor %}
+                        </select>
                         </div>
-                        <div class="form-group">
-
-
-
-                            <div class="form-group row">
-                                <label for="password" class="col-sm-2 col-form-label">password</label>
-                                <div class="col-sm-10">
-                                    <input type="text" class="form-control" name="password" id="password">
-                                </div>
-                            </div>
+                    </div>
+                    {% else %}
+                    <div class="form-group row">
+                        <label for="building_name" class=col-sm-2 col-form-label>Building</label>
+                        <div class="col-sm-10">
+                            <input class="form-control" type="text" name="building_name" value="{{session['building_name']}}" readonly>
 
                         </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            <button type="submit" class="btn btn-primary">Submit</button>
+                    </div>
+                    {% endif %}
+                    <div class="form-group row">
+                        <label for="password" class="col-sm-2 col-form-label">password</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" name="password" id="password">
                         </div>
-                </form>
-                </div>
+                    </div>
+
             </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+            </form>
         </div>
+    </div>
+</div>
 
 
 
 
+{% endblock %} {% block scripts %}
+
+<script>
+    function delete_device(device) {
+        device_name = $(device).parent().attr('id');
 
 
-        {% endblock %}
+        $.post('/delete_device', {
+            device_name: device_name
+        })
+
+        $("#" + device_name).remove();
+
+
+    }
+</script>
+
+{% endblock %}
