--- a/api/templates/devices.html
+++ b/api/templates/devices.html
@@ -1,29 +1,40 @@
 {% extends "layout.html" %} {% block content %}
-<button type="button " class="btn btn-primary " data-bs-toggle="modal" data-bs-target="#exampleModal ">
+<div class="container text-center">
+    <button type="button " class="btn btn-primary " data-bs-toggle="modal" data-bs-target="#exampleModal ">
   Add a Device
 </button> {% if devices %}
-<div class="list-group">
-    {% for device in devices %}
+
+    <div class="row">
+        {% for device in devices %}
 
 
-    <div id="{{device['name']}}">
-        <a href="{{url_for('get_device',_name=device['name'],_type=device['type'])}}" class="list-group-item list-group-item-action">
-    name:{{device["name"]}} <br> type: {{device["type"]}} <br> building:{{device["building_name"]}}
-     </a>
+        <div class="col-sm-3">
+            <div class="card" style="width: 15rem; height:22rem;" id="{{device['name']}}">
+
+                <img src="{{url_for('static', filename='/img/'+device['type']+'.png')}}" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title">Name: {{device["name"]}}</h5>
+                    <h5 class="card-title">Type: {{device["type"]}}</h5>
+                    <h5 class="card-title">Building: {{device["building_name"]}}</h5>
+                    <a href="{{url_for('get_device',_name=device['name'],_type=device['type'],building=device['building_name'])}}" class="btn btn-primary">Open</a>
+                    <a onclick="delete_device(this)" class="btn btn-danger">Delete</a>
+                </div>
 
 
+            </div>
+        </div>
 
-        <button type="button" class="btn btn-danger btn-sm" onclick="delete_device(this)">Delete</button>
+
+        {% endfor %}
     </div>
-    {% endfor %}
+
+    {% else %}
+    <h3>No devices here create one </h3>
+    {% endif %}
+
+    <!-- Button trigger modal -->
+
 </div>
-{% else %}
-<h3>No devices here create one </h3>
-{% endif %}
-
-<!-- Button trigger modal -->
-
-
 
 
 
@@ -43,10 +54,16 @@
                             <input type="text" class="form-control" name="name" id="name">
                         </div>
                     </div>
+
                     <div class="form-group row">
-                        <label for="type" class="col-sm-2 col-form-label">type</label>
+                        <label for="type" class=col-sm-2 col-form-label>type</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control" name="type" id="type">
+                            <select class="form-control" id="type" name="type">
+                            
+                            <option>sensor</option>
+                            <option>trap</option>
+                            
+                        </select>
                         </div>
                     </div>
 
@@ -70,12 +87,7 @@
                         </div>
                     </div>
                     {% endif %}
-                    <div class="form-group row">
-                        <label for="password" class="col-sm-2 col-form-label">password</label>
-                        <div class="col-sm-10">
-                            <input type="text" class="form-control" name="password" id="password">
-                        </div>
-                    </div>
+
 
             </div>
             <div class="modal-footer">
@@ -94,7 +106,7 @@
 
 <script>
     function delete_device(device) {
-        device_name = $(device).parent().attr('id');
+        device_name = $(device).parent().parent().attr('id');
 
 
         $.post('/delete_device', {
