--- a/api/templates/register.html
+++ b/api/templates/register.html
@@ -1,68 +1,52 @@
-{% extends "layout.html" %} {% block navbar %} {% endblock %} {% block content %}
+{% extends "layout.html" %} {% block navbar %} {% endblock %} {% block styles%}
 
-<section class="vh-100" style="background-color: #eee;">
-    <div class="container h-100">
-        <div class="row d-flex justify-content-center align-items-center h-100">
-            <div class="col-lg-12 col-xl-11">
-                <div class="card text-black" style="border-radius: 25px;">
-                    <div class="card-body p-md-5">
-                        <div class="row justify-content-center">
-                            <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
+<style>
+    .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
+    }
+    
+    @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+            font-size: 3.5rem;
+        }
+    }
+</style>
 
-                                <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
+<!-- Custom styles for this template -->
+<link href="{{url_for('static',filename='/css/signin.css')}}" rel="stylesheet"> {% endblock %} {% block content %}
 
-                                <form class="mx-1 mx-md-4" method="POST" action="{{url_for('register')}}">
+<div class="container text-center">
 
-                                    <div class="d-flex flex-row align-items-center mb-4">
-                                        <i class="fas fa-user fa-lg me-3 fa-fw"></i>
-                                        <div class="form-outline flex-fill mb-0">
-                                            <input type="text" id="name" class="form-control" name="name" />
-                                            <label class="form-label" for="form3Example1c">Your Name</label>
-                                        </div>
-                                    </div>
+    <main class="form-signin">
+        <form method="POST" action="{{url_for('register')}}">
+            <img class=" mb-4 " src="{{url_for('static',filename='img/logo.svg')}}" alt=" " width="72 " height="57 ">
+            <h1 class="h3 mb-3 fw-normal ">Registration Form</h1>
 
-                                    <div class="d-flex flex-row align-items-center mb-4">
-                                        <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
-                                        <div class="form-outline flex-fill mb-0">
-                                            <input type="email" id="email" name="email" class="form-control" />
-                                            <label class="form-label" for="form3Example3c">Your Email</label>
-                                        </div>
-                                    </div>
-
-                                    <div class="d-flex flex-row align-items-center mb-4">
-                                        <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
-                                        <div class="form-outline flex-fill mb-0">
-                                            <input type="password" id="password" name="password" class="form-control" />
-                                            <label class="form-label" for="form3Example4c">Password</label>
-                                        </div>
-                                    </div>
-
-                                    <div class="d-flex flex-row align-items-center mb-4">
-                                        <i class="fas fa-key fa-lg me-3 fa-fw"></i>
-                                        <div class="form-outline flex-fill mb-0">
-                                            <input type="password" id="form3Example4cd" class="form-control" />
-                                            <label class="form-label" for="form3Example4cd">Repeat your password</label>
-                                        </div>
-                                    </div>
-
-
-                                    <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                                        <button type="submit" class="btn btn-primary btn-lg">Register</button>
-                                    </div>
-
-                                </form>
-
-                            </div>
-                            <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
-
-                                <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp" class="img-fluid" alt="Sample image">
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <div class="form-floating ">
+                <input type="text" name="username" class="form-control " id="floatingInput " placeholder="username">
+                <label for="floatingInput ">Username</label>
             </div>
-        </div>
-    </div>
-</section>
+            <div class="form-floating ">
+                <input type="email" name="email" class="form-control " id="floatingInput " placeholder="name@example.com ">
+                <label for="floatingInput ">Email address</label>
+            </div>
+            <div class="form-floating ">
+                <input type="password" name="password" class="form-control " id="floatingPassword " placeholder="Password ">
+                <label for="floatingPassword ">Password</label>
+            </div>
+
+            <button class="w-100 btn btn-lg btn-primary " type="submit ">Register</button>
+            <p class="mt-5 mb-3 text-muted ">&copy; 2021–2022</p>
+            <a href="{{url_for('register')}}" style="color: #393f81;">Register here</a></p>
+        </form>
+    </main>
+
+</div>
+
+
+
 {% endblock %}
