--- a/api/templates/dashboard.html
+++ b/api/templates/dashboard.html
@@ -90,10 +90,9 @@
                         <div>
                             <button type="button" id="timespan" data-bs-toggle="dropdown" aria-expanded="false" class="btn btn-sm btn-outline-secondary dropdown-toggle">
                             <span data-feather="calendar"></span>
-                            This week
+                            Last Hour
                             </button>
                             <ul class="dropdown-menu" aria-labelledby="timespan">
-                                <li><a class="dropdown-item" href="#">Real time</a></li>
                                 <li><a class="dropdown-item" href="#">Last Hour</a></li>
                                 <li><a class="dropdown-item" href="#">Last Day</a></li>
                                 <li><a class="dropdown-item" href="#">Last Week</a></li>
@@ -101,7 +100,7 @@
                             </ul>
                         </div>
 
-
+                        <button type="button" id="real_time" class="btn btn-outline-success btn-sm"> Real Time</button>
 
                     </div>
 
