--- a/api/templates/login.html
+++ b/api/templates/login.html
@@ -1,8 +1,4 @@
-{% extends "layout.html" %} 
-{% block navbar %} 
-{% endblock %} 
-
-{% block styles%}
+{% extends "layout.html" %} {% block navbar %} {% endblock %} {% block styles%}
 
 <style>
     .bd-placeholder-img {
@@ -21,19 +17,14 @@
 </style>
 
 <!-- Custom styles for this template -->
-<link href="{{url_for('static',filename='/css/signin.css')}}" rel="stylesheet">
-
-{% endblock %}
-
-
-{% block content %}
+<link href="{{url_for('static',filename='/css/signin.css')}}" rel="stylesheet"> {% endblock %} {% block content %}
 
 <div class="container text-center">
 
     <main class="form-signin">
         <form method="POST" action="{{url_for('login')}}">
-            <img class=" mb-4 " src="{{url_for('static',filename='img/logo.svg')}}" alt=" " width="72 " height="57 ">
-            <h1 class="h3 mb-3 fw-normal ">Please sign in</h1>
+            <img class=" mb-4 " src="{{url_for('static',filename='img/logo.jpg')}}" alt=" " width="300" height="80">
+
 
             <div class="form-floating ">
                 <input type="email" name="email" class="form-control " id="floatingInput " placeholder="name@example.com ">
@@ -44,7 +35,7 @@
                 <label for="floatingPassword ">Password</label>
             </div>
 
-            <button class="w-100 btn btn-lg btn-primary " type="submit ">Sign in</button>
+            <button class="w-100 btn btn-lg btn-outline-dark " type="submit ">Sign in</button>
             <p class="mt-5 mb-3 text-muted ">&copy; 2021–2022</p>
             <a href="{{url_for('register')}}" style="color: #393f81;">Register here</a></p>
         </form>
