--- a/api/templates/register.html
+++ b/api/templates/register.html
@@ -23,8 +23,8 @@
 
     <main class="form-signin">
         <form method="POST" action="{{url_for('register')}}">
-            <img class=" mb-4 " src="{{url_for('static',filename='img/logo.svg')}}" alt=" " width="72 " height="57 ">
-            <h1 class="h3 mb-3 fw-normal ">Registration Form</h1>
+            <img class=" mb-4 " src="{{url_for('static',filename='img/logo.jpg')}}" alt=" " width="300" height="80">
+
 
             <div class="form-floating ">
                 <input type="text" name="username" class="form-control " id="floatingInput " placeholder="username">
@@ -39,9 +39,9 @@
                 <label for="floatingPassword ">Password</label>
             </div>
 
-            <button class="w-100 btn btn-lg btn-primary " type="submit ">Register</button>
+            <button class="w-100 btn btn-lg btn-outline-dark " type="submit ">Register</button>
             <p class="mt-5 mb-3 text-muted ">&copy; 2021–2022</p>
-            <a href="{{url_for('register')}}" style="color: #393f81;">Register here</a></p>
+
         </form>
     </main>
 
