--- a/api/templates/dashboard.html
+++ b/api/templates/dashboard.html
@@ -93,6 +93,7 @@
                             Last Hour
                             </button>
                             <ul class="dropdown-menu" aria-labelledby="timespan">
+                                <li><a class="dropdown-item" href="#">Last Minute</a></li>
                                 <li><a class="dropdown-item" href="#">Last Hour</a></li>
                                 <li><a class="dropdown-item" href="#">Last Day</a></li>
                                 <li><a class="dropdown-item" href="#">Last Week</a></li>
